# DaSPi

./: .gitignore  .mkdocsignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test.py
.github/workflows/: ci.yml
CHANGELOG/: index.html
about/: index.html
anova/: index.html
anova/gage-rnr-model/: index.html
anova/gage-study-model/: index.html
anova/linear-model/: index.html
css/: custom-colors.css
daspi/: __init__.py  _constants.py  _strings.py  _typing.py  _version.py  constants.py  strings.py
daspi/anova/: __init__.py  _model.py  anova.py  convert.py  model.py  tables.py  utils.py
daspi/datasets/: __init__.py  anova2.csv  anova3_unbalanced.csv  aspirin-dissolution.csv  asprin-dissolution.csv  carpet_full-factorial.csv  covariate.csv  drop_card.csv  eeprom_full-factorial.csv  eeprom_partial-factorial.csv  gage_rnr2.csv  gage_study1.csv  grnr_adjustment.csv  grnr_layer_thickness.csv  grnr_linearity.csv  iris.csv  mpg.csv  painkillers-dissolution.csv  partial-factorial.csv  partial_factorial.csv  salt_sticks.csv  shoe-sole.csv
daspi/doe/: __init__.py  build.py
daspi/plotlib/: __init__.py  appearance.py  chart.py  classify.py  constants.py  daspi.mplstyle  faceting.py  facets.py  none.txt  plotter.py  precast.py  templates.py  utils.py
daspi/regression/: __init__.py  model.py  utils.py
daspi/statistics/: __init__.py  confidence.py  constants.py  estimation.py  hypothesis.py  montecarlo.py  utils.py
docs/: CHANGELOG.md  index.md  installing.md
docs/anova/: gage-rnr-model.md  gage-study-model.md  index.md  linear-model.md
docs/css/: custom-colors.css
docs/doe/: design-builders.md  factor.md  fractional-factorial.md  full-factorial.md  (+1 more)
doe/: index.html
drawings/: decision_guides.drawio
guides/: index.html
installing/: index.html
notebooks/: doc-content_anova.ipynb  doc-content_guide-gage-rnr.ipynb  doc-content_guide-plotting.ipynb  doc-content_plotters.ipynb  doc-content_process-analysis.ipynb  doc-content_process-improvement.ipynb  doc-content_readme.ipynb
overrides/: main.html
plotlib/: index.html
search/: search_index.json
statistics/: index.html
tests/: anova_convert_test.py  anova_model_test.py  anova_tables_test.py  anova_test.py  creating_examples.ipynb  doe_build_test.py  plotlib_appearance_test.py  plotlib_chart_test.py  plotlib_classify_test.py  plotlib_facets_test.py  plotlib_plotter_test.py  plotlib_templates_test.py  plotlib_test.py  plotlib_visual_test.py  statistics_confidence_test.py  statistics_estimation_test.py  statistics_hypothesis_test.py  statistics_montecarlo_test.py  statistics_test.py  visual_plotlib_test.py
(+181 files in other folders)
