[project]
name = "DaSPi"
version = "0.1.0"
description = "Visualize and analyze your data with DaSPi. This package is designed for users who want to find relevant influencing factors in processes and validate improvements."
authors = [
    {name = "Reto Jäggli", email = "reto@jaeggli.email"},
]
dependencies = [
    "matplotlib>=3.8.2",
    "pandas>=2.1.4",
    "statsmodels>=0.14.1",
    "scipy>=1.11.4",
    "numpy>=1.26.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
]
