[project]
name = "DaSPi"
version = "1.7.0"
description = "Visualize and analyze your data with DaSPi. This package is designed for users who want to find relevant influencing factors in processes and validate improvements."
authors = [
    {name = "Reto Jäggli", email = "reto@jaeggli.email"},
]
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.1.4",
    "statsmodels>=0.14.1",
    "scipy>=1.11.4",
    "numpy>=1.26.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[project.urls]
Repository = "https://github.com/j4ggr/DaSPi"
Documentation = "https://j4ggr.github.io/DaSPi/"
Changelog = "https://j4ggr.github.io/DaSPi/Changelog"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
doc = [
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.1",
    "mkdocs-material>=9.5.13"
]


[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
doc = [
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.1",
    "mkdocs-material>=9.5.13"
]
